[package]
name = "lightmap-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "merge-exrs"
path = "src/merge-exrs.rs"

[[bin]]
name = "lightmap-to-ktx2"
path = "src/lightmap-to-ktx2.rs"

[[bin]]
name = "process-lightvol"
path = "src/process-lightvol.rs"

[[bin]]
name = "lightmap-tex-renderer"
path = "src/lightmap-tex-renderer.rs"

[[bin]]
name = "dilate"
path = "src/dilate.rs"

[[bin]]
name = "lightvol-to-ktx2"
path = "src/lightvol-to-ktx2.rs"

[[bin]]
name = "add-exrs"
path = "src/add-exrs.rs"

[[bin]]
name = "fix-seams"
path = "src/fix-seams.rs"

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.3"
glam = { version = "0.22.0", features = ["bytemuck"] }
image = "0.24.5"
structopt = "0.3.26"
pollster = "0.2.5"
wgpu = "0.14.2"
goth-gltf = { version = "0.1.0", path = "../../goth-gltf" }
futures-intrusive = "0.5.0"
ktx2-tools = { path = "../../ktx2-tools" }
half = { version = "2.2.0", features = ["bytemuck"] }
rayon = "1.6.1"
parking_lot = "0.12.1"
futures = "0.3.25"
nalgebra-sparse = "0.9.0"
nalgebra = "0.32.1"
